package monopoly;

public class Monopoly {
    public Monopoly() {

    }
}
