package monopoly;

public class Tablero {
    Casilla[] casillas;

    public Tablero() {
        casillas = new Casilla[40];
    }
}
